force-app/main/default/objects/Booking__c/fields/Guest_Rating__c.field-meta.xml
<CustomField>
    <fullName>Guest_Rating__c</fullName>
    <label>Guest Rating</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>