force-app/main/default/objects/Booking__c/fields/Total_Rent__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Check_In_Date__c),
        ISBLANK(Check_Out_Date__c),
        ISBLANK(Property__r.Rent__c)
    ),
    NULL,
    IF(
        ISPICKVAL(Property__r.Rent_Type__c, &quot;Per Night&quot;),
        (Check_Out_Date__c - Check_In_Date__c) * Property__r.Rent__c,
        ROUND(
            ((Check_Out_Date__c - Check_In_Date__c) / 30) * Property__r.Rent__c,
            2
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>