force-app/main/default/objects/Booking__c/validationRules/Advance_amount_for_longTerm_stay.validationRule-meta.xml
<ValidationRule>
    <fullName>Advance_amount_for_longTerm_stay</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Advance_Amount__c),
    OR(
        ISPICKVAL(Booking_Type__c, &quot;Student&quot;),
        ISPICKVAL(Booking_Type__c, &quot;Working Professional&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Advance Amount is mandatory for Student and Working Professional bookings</errorMessage>
</ValidationRule>