force-app/main/default/objects/Booking__c/validationRules/CheckInBeforeCheckOut.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInBeforeCheckOut</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( ISBLANK(Check_In_Date__c) ),
  NOT( ISBLANK(Check_Out_Date__c) ),
  Check_In_Date__c &gt;= Check_Out_Date__c
)</errorConditionFormula>
    <errorMessage>Check-In date must be before Check-Out date.</errorMessage>
</ValidationRule>