force-app/main/default/objects/Booking__c/validationRules/Number_of_Guests.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Guests</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Guests__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Number_of_Guests__c</errorDisplayField>
    <errorMessage>Number of guests should be 1 or more</errorMessage>
</ValidationRule>