force-app/main/default/objects/Booking__c/validationRules/OccupancyLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>OccupancyLimit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( ISBLANK(Number_of_Guests__c) ),
  NOT( ISBLANK(Property__r.Max_Occupancy__c) ),
  Number_of_Guests__c &gt; Property__r.Max_Occupancy__c
)</errorConditionFormula>
    <errorDisplayField>Number_of_Guests__c</errorDisplayField>
    <errorMessage>Number of guests exceeds property maximum occupancy.</errorMessage>
</ValidationRule>