force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Guest__c</columns>
    <columns>Booking_Type__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Rent__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>Guest_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>